--- a/.env
+++ b/.env
@@ -3,4 +3,6 @@ DEBUG=false
 
 LOGIN_USERNAME=3401923
 LOGIN_PASSWORD=Lovesoccer16
-SELENIUM_HEADLESS=true 
+SELENIUM_HEADLESS=true
+
+WEBHOOK_URL = os.getenv("WEBHOOK_URL", "https://zpsvatonxakysnbqnfcc.supabase.co/functions/v1/condo-search-webhook")
